--- a/android-studio/UIandInput/app/src/main/res/layout/activity_main.xml
+++ b/android-studio/UIandInput/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingVertical="50dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -23,6 +24,7 @@
     <EditText
         android:id="@+id/txtPhoneNumber"
         android:layout_width="0dp"
+        android:minHeight="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -55,7 +57,7 @@
             <Button
                 android:id="@+id/btnKeyPad1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -65,7 +67,7 @@
             <Button
                 android:id="@+id/btnKeyPad2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -92,7 +94,7 @@
             <Button
                 android:id="@+id/btnKeyPad4"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -102,7 +104,7 @@
             <Button
                 android:id="@+id/btnKeyPad5"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -112,7 +114,7 @@
             <Button
                 android:id="@+id/btnKeyPad6"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -130,7 +132,7 @@
             <Button
                 android:id="@+id/btnKeyPad7"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -140,7 +142,7 @@
             <Button
                 android:id="@+id/btnKeyPad8"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -150,7 +152,7 @@
             <Button
                 android:id="@+id/btnKeyPad9"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -168,7 +170,7 @@
             <Button
                 android:id="@+id/btnKeyPadOptsL"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -178,7 +180,7 @@
             <Button
                 android:id="@+id/btnKeyPadZero"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -188,7 +190,7 @@
             <Button
                 android:id="@+id/btnKeyPadOptsR"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -204,7 +206,7 @@
             <Button
                 android:id="@+id/btnComposeMessage"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -214,7 +216,7 @@
             <Button
                 android:id="@+id/btnStartCall"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:onClick="onKeyPadButtonPress"
@@ -230,9 +232,10 @@
             <Button
                 android:id="@+id/btnColourClickMe"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:paddingVertical="50dp"
                 android:tag="colour"
                 android:text="Press, drag, or release me and I will change colour" />
         </LinearLayout>
